# SmartHomeSecurityPanel

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.txt
